# sunofriend

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  PYPI.md  README.md  SOCIAL.md  constraints-audio-macos.txt  pyproject.toml  requirements-ai-macos.txt
.agents/skills/: sunofriend
.github/ISSUE_TEMPLATE/: daw-ai-compatibility.yml
.github/workflows/: ci.yml
assets/: PROMPTS.md  README.md
docs/: AI_TRANSCRIPTION_ROADMAP.md  ARCHITECTURE.md  INSTRUMENTS.md  PHASE1_TRANSCRIPTION_BAKEOFF.md  PHASE3_INSTRUMENT_INTELLIGENCE.md  PHASE4_CLEANUP_TIMBRE_LAB.md  PHASE4_STABILIZATION_REVIEW.md  PHASE5_LOCAL_STUDIO_ACCEPTANCE.md  PHASE5_MUSCRIPTOR_COMMUNITY_PLAN.md  PHASE6_CREATIVE_ARRANGEMENT.md  TECHNICAL_TOUR.md  VOCAL_MELODY.md  WORKBENCH.md
examples/the-aisle-at-lidl/: README.md  results.json
examples/the-aisle-at-lidl/midi/reconstruct/: full-arrangement.mid  hats.mid  hats.provenance.json  pads.mid  pads.provenance.json  strings-audition-only.mid  strings-audition-only.provenance.json
examples/the-aisle-at-lidl/midi/repair/: bass-contour-clean.mid  bass-contour-clean.provenance.json  bass-raw-verified.mid  bass-raw-verified.provenance.json  bass-root-safe.mid  bass-root-safe.provenance.json  full-arrangement.mid  keys-accompaniment.mid  keys-accompaniment.provenance.json  keys-main.mid  keys-main.provenance.json  keys-melody.mid  keys-melody.provenance.json  keys-uncertain.mid  keys-uncertain.provenance.json  kick-deep.mid  kick-deep.provenance.json  kick-high.mid  kick-high.provenance.json  kick.mid  kick.provenance.json
scripts/: setup-ai-runtime.sh  setup-demucs-model.sh  setup-game-model.sh  setup-openl3-model.sh  setup-pesto-model.sh  setup-rmvpe-model.sh
skills/sunofriend/: SKILL.md
skills/sunofriend/agents/: openai.yaml
src/sunofriend/: __init__.py  __main__.py  ai_bakeoff.py  ai_benchmark.py  ai_cache.py  ai_cache_benchmark.py  ai_cleanup.py  ai_cleanup_worker.py  ai_expression.py  ai_label_split.py  ai_matrix.py  ai_quality.py  ai_runtime.py  ai_session.py  ai_session_benchmark.py  ai_setting_compare.py  ai_worker.py  ai_worker_session.py  audio.py  ausampler.py  beatgrid.py  chords.py  cli.py  clip.py  compare.py  conversion.py  diagnostics.py  drum_mapping.py  evaluate.py  garageband.py  garageband_pack_acceptance.py  generate.py  grid.py  harmony.py  hybrid_report.py  imagine.py  instrument_bundle.py  instrument_catalog.py  instrument_cluster.py  instrument_dynamics.py  (+62 more)
tests/: test_ai_bakeoff.py  test_ai_benchmark.py  test_ai_cache.py  test_ai_cleanup.py  test_ai_label_split.py  test_ai_matrix.py  test_ai_runtime.py  test_ai_session.py  test_ai_setting_compare.py  test_audio_analysis.py  test_beatgrid.py  test_cli_basics.py  test_cli_clip.py  test_cli_midi_anchor.py  test_cli_midi_transform.py  test_cli_vocal.py  test_clip_v1.py  test_conversion_modes.py  test_drum_mapping.py  test_drums_v2.py  test_garageband_pack_acceptance.py  test_harmony.py  test_hybrid_report.py  test_instrument_bundle.py  test_instrument_cluster.py  test_instrument_dynamics.py  test_instrument_embedding.py  test_instrument_loops.py  test_instrument_preference.py  test_instrument_usability.py  test_instruments.py  test_lidl_v2_golden.py  test_listen_all_contract.py  test_listen_roundtrip.py  test_melody_profile.py  test_melody_v2.py  test_metadata_and_chords.py  test_midi_ab_review.py  test_midi_align.py  test_midi_anchor.py  (+68 more)
