[project]
name = "sunofriend"
version = "0.1.0"
description = "Generate clean MIDI remakes from Moises/Suno stem folders."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Needed for the `listen` command (transcribe -> render -> compare -> refine).
# The legacy `remake` command still runs on the standard library alone.
listen = [
    "numpy",
    "librosa>=0.10",
    "soundfile",
    "basic-pitch>=0.3",
]

[project.scripts]
sunofriend = "sunofriend.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
