[project]
name = "sunofriend"
version = "0.3.0"
description = "Generate clean MIDI remakes from Moises/Suno stem folders."
requires-python = ">=3.9,<3.12"
dependencies = []

[project.optional-dependencies]
# Needed for the `listen` command (transcribe -> render -> compare -> refine).
# The legacy `remake` command still runs on the standard library alone.
listen = [
    "numpy",
    "librosa>=0.10",
    "soundfile",
    "basic-pitch>=0.3",
    # Basic Pitch prefers the ONNX model in Sunofriend; this keeps inference
    # available on Apple Silicon without installing TensorFlow.
    "onnxruntime>=1.17,<2",
    # coremltools 9 disables its conversion API with newer scikit-learn.
    "scikit-learn>=1.0,<=1.5.1",
    # basic-pitch's resampy constraint still imports pkg_resources.
    "setuptools>=69,<81",
]
midi = [
    "mido>=1.3,<2",
    "python-rtmidi>=1.5,<2",
]

[project.scripts]
sunofriend = "sunofriend.cli:main"

[build-system]
requires = ["setuptools>=69,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
